# sonarqube-mcp-py

./: .gitignore  AGENTS.md  CHANGELOG.md  MEMORY.md  README.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  publish.yml
src/sonarqube_mcp/: __init__.py  client.py  server.py
tests/: test_client.py
